--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                 <p>I'm <span class="typedText"></span></p>
             </div>
             <div class="featured-text-info">
-                <p>Experienced frontend developer with a passion for creating visually stunning
-                   and user-friendly websites.
+                <p>Experienced software developer with a strong focus on building efficient, scalable, and maintainable applications. Passionate about solving complex problems through clean and optimized code.
                 </p>
             </div>
             <div class="featured-text-btn">
@@ -74,13 +73,13 @@
             <div class="social_icons">
                 <div class="icon"><a href="https://www.facebook.com/jmlazaroo1/"><i class="uil uil-facebook"></i></a></div>
                 <div class="icon"><a href="https://www.linkedin.com/in/jmlzr/"><i class="uil uil-linkedin-alt"></i></a></div>
-                <div class="icon"><a href="https://www.instagram.com/jm_lzr/"></a><i class="uil uil-instagram"></i></a></div>
-                <div class="icon"><i class="uil uil-github-alt"></i></div>
+                <div class="icon"><a href="https://www.instagram.com/jm_lzr/"><i class="uil uil-instagram"></i></a></div>
+                <div class="icon"><a href="https://github.com/JaymarcTamaki"><i class="uil uil-github-alt"></i></a></div>
             </div>
           </div>
           <div class="featured-image">
             <div class="image">
-                <img src="assets/images/avatar.png" alt="avatar">
+                <img src="1.jpg" alt="avatar">
             </div>
           </div>
           <div class="scroll-icon-box">
@@ -238,8 +237,8 @@
         <div class="footer-social-icons">
             <div class="icon"><a href="https://www.facebook.com/jmlazaroo1/"><i class="uil uil-facebook"></i></a></div>
             <div class="icon"><a href="https://www.linkedin.com/in/jmlzr/"><i class="uil uil-linkedin-alt"></i></a></div>
-            <div class="icon"><a href="https://www.instagram.com/jm_lzr/"></a><i class="uil uil-instagram"></i></a></div>
-            <div class="icon"><i class="uil uil-github-alt"></i></div>
+            <div class="icon"><a href="https://www.instagram.com/jm_lzr/"><i class="uil uil-instagram"></i></a></div>
+            <div class="icon"><a href="https://github.com/JaymarcTamaki"><i class="uil uil-github-alt"></i></a></div>
         </div>
     </footer>
 
